# master2025-llm-based-autodocumentation-evaluation-for-medical-dispatchers

./: .gitignore  README.md  compose.yaml
FineTuning/Freezing/: GenerateTrainData.ipynb  README.md  full_finetune_T5.ipynb  prepare_data.ipynb  pyproject.toml
FineTuning/LoRA/: GenerateTrainingData.ipynb  README.md  prepare_data.ipynb  pyproject.toml  qwen3.ipynb
FineTuning/multi_stage_retrieval/: GenerateRAG.ipynb  README.md  compare_rags.ipynb  pyproject.toml  retrieval.ipynb
app/: .env.template  Dockerfile  Norwegian_Index.db  config.py  database.py  dependencies.py  main.py  pyproject.toml  ruff.toml  schemas.py
app/modules/: basedata.py
app/modules/evaluateBot/: evaluateBot.py  prompts.py  state.py
app/modules/generateReport/: GenerateReport.py
app/modules/summaryBot/: prompts.py  state.py  summaryBot.py
app/ragStuff/: startkort.md  utils.py
app/ragStuff/LabelWork/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  40.md  (+1 more)
app/ragStuff/VectorStores/Concat_Chapter_FAISS/: index.faiss  index.pkl
app/ragStuff/VectorStores/Concat_Chapter_FAISS_old/: index.faiss  index.pkl
app/ragStuff/VectorStores/Concat_Criteria_Chapter_FAISS/: index.faiss  index.pkl
app/ragStuff/VectorStores/Mean_Criteria_Chapter_Embeddings_FAISS/: index.faiss  index.pkl
app/ragStuff/VectorStores/Paraphrase_Criteria_Embeddings_FAISS/: index.faiss  index.pkl
app/ragStuff/VectorStores/Summary_Chapter_FAISS/: index.faiss  index.pkl
app/routers/: generateReport.py
app/utils/: __init__.py  utils.py
reportgenerator/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
reportgenerator/src/: fetchclient.ts  index.css  main.tsx  routeTree.gen.ts
reportgenerator/src/features/: AllReports.tsx  AppSidebar.tsx  GenerateReport.tsx  PromptInput.tsx  ReportPage.tsx
reportgenerator/src/routes/: $reportId.tsx  __root.tsx  generate.tsx  index.tsx
reportgenerator/src/schema/: schema.d.ts
