[project]
name = "fine-tuning"
version = "0.1.0"
description = "Finetuning llm on medical Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "fastapi[standard]>=0.115.8",
    "langchain[openai]>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.70",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.5",
    "langsmith>=0.3.8",
    "beautifulsoup4>=4.13.3",
    "langchain-text-splitters>=0.3.6",
    "langchainhub>=0.1.21",
    "tiktoken>=0.9.0",
    "pytest>=8.3.4",
    "langchain-openai>=0.3.6",
    "PyMuPDF>=1.25.3",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.3",
    "ipykernel>=6.29.5",
    "pytesseract>=0.3.13",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "datasets>=3.4.1",
    "accelerate>=1.5.2",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "python-doctr>=0.11.0",
    "faiss-cpu>=1.10.0",
    "nltk>=3.9.1",
    "unstructured[md]>=0.17.2",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "einops>=0.8.1",
    "googletrans>=4.0.2",
    "bitsandbytes>=0.45.5",
    "evaluate>=0.4.3",
    "rouge-score>=0.1.2",
    "absl-py>=2.2.2",
]
