[project]
name = "unsloth-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.0",
    "evaluate>=0.4.3",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "rouge-score>=0.1.2",
    "ruff>=0.11.8",
    "scikit-learn>=1.7.0",
    "unsloth>=2025.4.7",
]
